# xontrib-powerline3

./: LICENSE  README.md  pyproject.toml
tests/: test_processor.py
xontrib/: powerline3.py
xontrib/powerline3/: __init__.py  fields.py  processor.py  test_processor.py
xontrib_powerline3/: colors.py  fields.py  processor.py  shell.py
