[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
]

[tool.pdm.build]
includes = ["xontrib", "xontrib_powerline3"]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    {name = "Noortheen Raja NJ", email = "jnoortheen@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "xonsh>=0.12",
    "tomlkit",
]
name = "xontrib-powerline3"
version = "0.3.17"
description = "Yet another powerline theme for xonsh with async prompt support."
readme = "README.md"
keywords = ["xontrib", "xonsh"]
classifiers = ["Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Natural Language :: English", "Operating System :: OS Independent", "Topic :: System :: Shells", "Topic :: System :: System Shells", "Topic :: Terminals", "Programming Language :: Python", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.8"]

[project.urls]
Documentation = "https://github.com/jnoortheen/xontrib-powerline3/blob/master/README.md"
Code = "https://github.com/jnoortheen/xontrib-powerline3"
"Issue tracker" = "https://github.com/jnoortheen/xontrib-powerline3/issues"
repository = "https://github.com/jnoortheen/xontrib-powerline3"
